--- a/flower.html
+++ b/flower.html
@@ -8,6 +8,25 @@
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
     <title>flowers</title>
 </head>
+,<style>
+  .heart{
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
+    display: flex;
+    align-items: right;
+    justify-content: center;
+    background: #00000000;
+    height: 150px;
+    width: 150px;
+    background-color: red;
+    position: rotate(45deg);
+    box-shadow: -20 px 20px 150px #f20044;
+
+
+  }
+  
+</style>
 <body class="container">
   <!-- Pembuat code: https://codepen.io/mdusmanansari/pen/BamepLe -->
     <div class="night"></div>
@@ -308,5 +327,6 @@
       </div>
     </div>
     <script src="main.js"></script>
+    
   </body>
 </html>
